--- a/.github/workflows/deploy-python.yaml
+++ b/.github/workflows/deploy-python.yaml
@@ -5,8 +5,28 @@ on:
       - main
 
 jobs:
+  lint:
+    runs-on: self-hosted
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.x
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+
+      - name: Run Flake8
+        run: flake8
+
   deploy:
     runs-on: self-hosted
+    needs: lint
 
     steps:
       - name: Checkout code
