--- a/.github/workflows/deploy-python.yaml
+++ b/.github/workflows/deploy-python.yaml
@@ -1,4 +1,5 @@
 name: Deploy Ozma via Docker Container
+
 on:
   push:
     branches:
@@ -21,8 +22,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install flake8
 
-      - name: Run Flake8
-        run: flake8
+      - name: Run Flake8 with Reviewdog
+        uses: reviewdog/action-flake8@v2
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          reporter: github-check
+          flake8_args: --config=setup.cfg
+          level: warning
 
   deploy:
     runs-on: self-hosted
