Passing env variables to container directly

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: ${DOCKER_IMAGE_NAME}
     image: ${DOCKERHUB_USERNAME}/${DOCKER_IMAGE_NAME}:latest
     environment:
-      - token=${token}
-      - guild_id=${guild_id}
+      - token
+      - invitation_channel
+      - error_channel_id
+      - guild_id
     restart: always
